--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,7 +30,7 @@
     "@tanstack/react-query": "^5.90.12",
     "dotenv": "catalog:",
     "zod": "catalog:",
-    "@sda-church/env": "workspace:*"
+    "@sda-chms/env": "workspace:*"
   },
   "devDependencies": {
     "@tanstack/react-router-devtools": "^1.141.1",
@@ -44,6 +44,6 @@
     "vite": "^7.2.4",
     "@tanstack/react-query-devtools": "^5.91.1",
     "typescript": "catalog:",
-    "@sda-church/config": "workspace:*"
+    "@sda-chms/config": "workspace:*"
   }
 }
