feat: add shared lib

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -22,7 +22,8 @@
     "@sda-chms/config": "workspace:*"
   },
   "dependencies": {
-    "drizzle-orm": "^0.45.1",
+    "drizzle-orm": "catalog:",
+    "drizzle-zod": "^0.8.3",
     "pg": "^8.16.3",
     "dotenv": "catalog:",
     "zod": "catalog:",
