--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,11 +10,13 @@
     "start": "bun run dist/index.js"
   },
   "dependencies": {
-    "hono": "^4.8.2",
-    "dotenv": "catalog:",
-    "zod": "catalog:",
+    "@hono/zod-validator": "^0.7.6",
+    "@sda-chms/db": "workspace:*",
     "@sda-chms/env": "workspace:*",
-    "@sda-chms/db": "workspace:*"
+    "@sda-chms/shared": "workspace:*",
+    "dotenv": "catalog:",
+    "hono": "^4.8.2",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@types/bun": "catalog:",
