--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
       "dotenv": "^17.2.2",
       "zod": "^4.1.13",
       "typescript": "^5",
-      "@types/bun": "^1.3.4"
+      "@types/bun": "^1.3.4",
+      "drizzle-orm": "^0.45.1"
     }
   },
   "type": "module",
