--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,24 +13,26 @@
   "dependencies": {
     "@base-ui/react": "^1.0.0",
     "@fontsource-variable/inter": "^5.2.8",
-    "@hookform/resolvers": "^5.1.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@sda-chms/env": "workspace:*",
+    "@sda-chms/shared": "workspace:*",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-form": "^1.12.3",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.141.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "catalog:",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.69.0",
     "shadcn": "^3.6.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
-    "@tanstack/react-query": "^5.90.12",
-    "dotenv": "catalog:",
-    "zod": "catalog:",
-    "@sda-chms/env": "workspace:*"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@tanstack/react-router-devtools": "^1.141.1",
