--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -7,6 +7,9 @@
     "./server": "./src/server.ts",
     "./web": "./src/web.ts"
   },
+  "scripts": {
+    "check-types": "tsc --noEmit"
+  },
   "dependencies": {
     "zod": "catalog:",
     "@t3-oss/env-core": "^0.13.1",
