--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,7 +11,11 @@
       "default": "./src/*.ts"
     }
   },
+  "scripts": {
+    "check-types": "tsc --noEmit"
+  },
   "dependencies": {
-    "@sda-chms/db": "workspace:*"
+    "@sda-chms/db": "workspace:*",
+    "zod": "catalog:"
   }
 }
