--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -28,6 +28,7 @@
     "pg": "^8.16.3",
     "dotenv": "catalog:",
     "zod": "catalog:",
-    "@sda-chms/env": "workspace:*"
+    "@sda-chms/env": "workspace:*",
+    "@sda-chms/shared": "workspace:*"
   }
 }
