--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,10 +22,12 @@
     "@tanstack/react-router": "^1.141.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "catalog:",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "shadcn": "^3.6.2",
