--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,7 +1,19 @@
 {
-  "name": "server",
+  "name": "@sda-chms/server",
   "type": "module",
   "main": "src/index.ts",
+  "types": "src/index.ts",
+  "exports": {
+    ".": {
+      "default": "./src/index.ts"
+    },
+    "./client": {
+      "default": "./src/client.ts"
+    },
+    "./*": {
+      "default": "./src/*.ts"
+    }
+  },
   "scripts": {
     "build": "tsdown",
     "check-types": "tsc -b",
@@ -15,7 +27,7 @@
     "@sda-chms/env": "workspace:*",
     "@sda-chms/shared": "workspace:*",
     "dotenv": "catalog:",
-    "hono": "^4.8.2",
+    "hono": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
