--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "@sda-chms/web",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@sda-chms/env": "workspace:*",
     "@sda-chms/shared": "workspace:*",
+    "@sda-chms/server": "workspace:*",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-form": "^1.12.3",
     "@tanstack/react-query": "^5.90.12",
@@ -24,6 +25,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "catalog:",
+    "hono": "catalog:",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
@@ -37,6 +39,8 @@
     "zod": "catalog:"
   },
   "devDependencies": {
+    "@sda-chms/config": "workspace:*",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "@tanstack/react-router-devtools": "^1.141.1",
     "@tanstack/router-plugin": "^1.141.1",
     "@types/node": "^24.10.1",
@@ -45,9 +49,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.17",
-    "vite": "^7.2.4",
-    "@tanstack/react-query-devtools": "^5.91.1",
     "typescript": "catalog:",
-    "@sda-chms/config": "workspace:*"
+    "vite": "^7.2.4"
   }
 }
