--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
       "zod": "^4.1.13",
       "typescript": "^5",
       "@types/bun": "^1.3.4",
-      "drizzle-orm": "^0.45.1"
+      "drizzle-orm": "^0.45.1",
+      "hono": "^4.11.3"
     }
   },
   "type": "module",
