--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,14 +15,15 @@
     "@fontsource-variable/inter": "^5.2.8",
     "@hookform/resolvers": "^5.2.2",
     "@sda-chms/env": "workspace:*",
-    "@sda-chms/shared": "workspace:*",
     "@sda-chms/server": "workspace:*",
+    "@sda-chms/shared": "workspace:*",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-form": "^1.12.3",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.141.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "catalog:",
     "hono": "catalog:",
