feat: add database management scripts for starting and stopping Docker containers

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "type": "module",
   "scripts": {
     "check": "biome check --write .",
+    "db:start": "docker compose up -d",
+    "db:stop": "docker compose down",
     "dev": "turbo dev",
     "build": "turbo build",
     "check-types": "turbo check-types",
