feat: add @faker-js/faker dependency and database seeding script

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,6 +14,7 @@
     "db:generate": "drizzle-kit generate",
     "db:studio": "drizzle-kit studio",
     "db:migrate": "drizzle-kit migrate",
+    "db:seed": "bun run ./src/seed.ts",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "pg": "^8.16.3",
     "dotenv": "catalog:",
     "zod": "catalog:",
+    "@faker-js/faker": "catalog:",
     "@sda-chms/env": "workspace:*",
     "@sda-chms/shared": "workspace:*"
   }
