--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
       "typescript": "^5",
       "@types/bun": "^1.3.4",
       "drizzle-orm": "^0.45.1",
-      "hono": "^4.11.3"
+      "hono": "^4.11.3",
+      "@faker-js/faker": "^9.9.0"
     }
   },
   "type": "module",
