--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@base-ui/react": "^1.0.0",
+    "@base-ui/react": "^1.1.0",
     "@fontsource-variable/inter": "^5.2.8",
     "@hookform/resolvers": "^5.2.2",
     "@sda-chms/env": "workspace:*",
@@ -27,19 +27,24 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "catalog:",
+    "embla-carousel-react": "^8.6.0",
     "hono": "catalog:",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.6",
     "react": "19.2.3",
-    "react-day-picker": "^9.13.0",
+    "react-day-picker": "^9.13.1",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
+    "react-resizable-panels": "^4.6.2",
     "react-scan": "^0.4.3",
+    "recharts": "2.15.4",
     "shadcn": "^3.6.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
+    "vaul": "^1.1.2",
     "zod": "catalog:"
   },
   "devDependencies": {
