feat: add @total-typescript/ts-reset dependency and enhance CelebrationsCard with loading state
- Added @total-typescript/ts-reset to devDependencies for improved TypeScript support.
- Updated CelebrationsCard to fetch real celebration data, excluding deceased individuals, and implemented a loading skeleton for better user experience.
- Refactored data handling to align with business logic rules regarding celebrations.

--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "@sda-chms/env": "workspace:*"
   },
   "devDependencies": {
-    "turbo": "^2.6.3",
     "@biomejs/biome": "2.3.10",
-    "ultracite": "6.5.0",
-    "typescript": "catalog:",
+    "@sda-chms/config": "workspace:*",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/bun": "catalog:",
-    "@sda-chms/config": "workspace:*"
+    "turbo": "^2.6.3",
+    "typescript": "catalog:",
+    "ultracite": "6.5.0"
   },
   "packageManager": "bun@1.3.0"
 }
