feat: enhance form functionality with important dates and validation
- Added support for managing important dates in the AddPersonForm, including options for recurrence and categorization.
- Integrated a field array for dynamic addition and removal of important dates.
- Updated the form's default values to include an empty array for important dates.
- Improved the FormSelect component to accept a default value prop for better control.

--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,8 @@
         "useSortedClasses": "error"
       },
       "correctness": {
-        "useImageSize": "off"
+        "useImageSize": "off",
+        "noUnusedImports": "warn"
       },
       "a11y": {
         "useKeyWithClickEvents": "off",
